force-app/main/default/objects/Product2/fields/QBExternalID__c.field-meta.xml
<CustomField>
    <fullName>QBExternalID__c</fullName>
    <externalId>true</externalId>
    <label>QB External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>