force-app/main/default/objects/Product2/fields/Sync_With_QuickBooks__c.field-meta.xml
<CustomField>
    <fullName>Sync_With_QuickBooks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync With QuickBooks</label>
    <type>Checkbox</type>
</CustomField>