force-app/main/default/objects/Product2/fields/Synced_With_Quickbooks__c.field-meta.xml
<CustomField>
    <fullName>Synced_With_Quickbooks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced With Quickbooks</label>
    <type>Checkbox</type>
</CustomField>